--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 
 <!doctype html>
-<html lang="en-US">
+<html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<title>My Blog &#8211; My WordPress Blog</title>
+	<title>Moto Cross em Ação &#8211; Ínicio</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel="alternate" type="application/rss+xml" title="My Blog &raquo; Feed" href="https://himu.bikebuzzbd.com/feed/" />
