--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<div class="header-info-area">
 												<div class="header-info-box">
 							<span class="header-box-icon"><i class="fa fa-phone"></i></span>
-							<span class="header-box-title">+90 123 45 456</span>
+							<span class="header-box-title">+55 11 96483-1111</span>
 						</div>
 												<div class="header-info-box">
 							<span class="header-box-icon"><i class="fa fa-envelope-o"></i></span>
-							<span class="header-box-title">example@example.com</span>
+							<span class="header-box-title">mauriciojosesilvasilva38@gmail.com</span>
 						</div>
 												<div class="header-info-box">
 							<span class="header-box-icon"><i class="fa fa-clock-o"></i></span>
-							<span class="header-box-title">8:00 AM - 10:00 PM</span>
+							<span class="header-box-title">9:00 - 18:00</span>
 						</div>
 											</div>
 				</div>
@@ -207,31 +207,29 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					</span>
 				</button>
 				<div class="header-menu mr-auto">
-					<div id="navmenu" class="collapse navbar-collapse"><ul id="main-menu" class="navbar-nav sm sm-simple"><li id="menu-item-7322" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-7322"><a href="#">Home</a>
+					<div id="navmenu" class="collapse navbar-collapse"><ul id="main-menu" class="navbar-nav sm sm-simple"><li id="menu-item-7322" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-7322"><a href="#">Inicio</a>
 <ul class="sub-menu">
 	<li id="menu-item-10" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6798 current_page_item menu-item-10"><a href="https://himu.bikebuzzbd.com/" aria-current="page">Home One</a></li>
-	<li id="menu-item-7321" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7321"><a href="https://himu.bikebuzzbd.com/home-two/">Home Two</a></li>
+	<li id="menu-item-7321" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7321"><a href="https://himu.bikebuzzbd.com/home-two/">Inicio dois</a></li>
 </ul>
 </li>
-<li id="menu-item-1071" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1071"><a href="https://himu.bikebuzzbd.com/about-page/">About</a></li>
-<li id="menu-item-1232" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1232"><a href="#">Pages</a>
+<li id="menu-item-1071" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1071"><a href="https://himu.bikebuzzbd.com/about-page/">Sobre</a></li>
+<li id="menu-item-1232" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1232"><a href="#">Paginas</a>
 <ul class="sub-menu">
-	<li id="menu-item-1222" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1222"><a href="https://himu.bikebuzzbd.com/service-one/">Service</a></li>
-	<li id="menu-item-1072" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1072"><a href="https://himu.bikebuzzbd.com/sample-page-2/">Top Transmission</a></li>
-	<li id="menu-item-1228" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1228"><a href="https://himu.bikebuzzbd.com/fun-fact/">Fun Fact</a></li>
-	<li id="menu-item-1361" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1361"><a href="https://himu.bikebuzzbd.com/pricing-one/">Pricing</a></li>
+	<li id="menu-item-1222" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1222"><a href="https://himu.bikebuzzbd.com/service-one/">Serviços</a></li>
+	<li id="menu-item-1361" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1361"><a href="https://himu.bikebuzzbd.com/pricing-one/">Preços</a></li>
 </ul>
 </li>
-<li id="menu-item-7293" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-7293"><a href="#">Shop</a>
+<li id="menu-item-7293" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-7293"><a href="#">Loja</a>
 <ul class="sub-menu">
-	<li id="menu-item-7292" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7292"><a href="https://himu.bikebuzzbd.com/shop/">Shop</a></li>
+	<li id="menu-item-7292" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7292"><a href="https://himu.bikebuzzbd.com/shop/">Loja</a></li>
 	<li id="menu-item-7290" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7290"><a href="https://himu.bikebuzzbd.com/checkout/">Checkout</a></li>
-	<li id="menu-item-7291" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7291"><a href="https://himu.bikebuzzbd.com/cart/">Cart</a></li>
+	<li id="menu-item-7291" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7291"><a href="https://himu.bikebuzzbd.com/cart/">Carrinho de compras</a></li>
 </ul>
 </li>
 <li id="menu-item-1231" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1231"><a href="#">Blog</a>
 <ul class="sub-menu">
-	<li id="menu-item-415" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-415"><a href="https://himu.bikebuzzbd.com/blog/">Default</a></li>
+	<li id="menu-item-415" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-415"><a href="https://himu.bikebuzzbd.com/blog/">blog</a></li>
 	<li id="menu-item-1299" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1299"><a href="https://himu.bikebuzzbd.com/blog-two-colum/">Blog Two Colum</a></li>
 	<li id="menu-item-1300" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1300"><a href="https://himu.bikebuzzbd.com/blog-three-coloum/">Blog Three Coloum</a></li>
 	<li id="menu-item-1301" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1301"><a href="https://himu.bikebuzzbd.com/blog-right-2/">Blog Right Two Coloum</a></li>
@@ -251,8 +249,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 </li>
 <li id="menu-item-6902" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-6902"><a href="#">Contact</a>
 <ul class="sub-menu">
-	<li id="menu-item-6903" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6903"><a href="https://himu.bikebuzzbd.com/contact-us/">Contact One</a></li>
-	<li id="menu-item-6904" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6904"><a href="https://himu.bikebuzzbd.com/contact-two/">Contact Two</a></li>
+	<li id="menu-item-6903" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6903"><a href="./contact-us/">Contact Primario</a></li>
+	<li id="menu-item-6904" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6904"><a href="./contact-two/">Contact Two</a></li>
 </ul>
 </li>
 </ul></div>				</div>
@@ -368,10 +366,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	                <div class="justify-content-center ">
 	                    <div class="col-lg-10">
 	                        <div class="slider-content text-left">
-	                            <div class="sub-title" data-animation="fadeInUp" data-delay="1s"><p>We Provide The Best<br />Cycling Experience</p></div>
-	                            <div class="slider-dec" data-animation="fadeInUp" data-delay="1s">Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.sagittis magna.From helpdesk. </div>
+	                            <div class="sub-title" data-animation="fadeInUp" data-delay="1s"><p>Vem ai, MotoCross em Ação<br />Em Guarulhos!</p></div>
+	                            <div class="slider-dec" data-animation="fadeInUp" data-delay="1s">O Motocross Guarulhos é um evento que visa promover a prática do motocross na cidade de Guarulhos, trazendo pilotos profissionais e amadores para uma competição emocionante. O evento acontecerá de 8 a 10 de Dezembro no(a)(Local em breve), reunindo fãs, esportistas e entusiastas desse incrível esporte.</div>
 	                            <div class="himeu-slider2-btnss">
-									<a class="blob-btn" href="" data-animation="fadeInUp" data-delay="1s">Read More<i class="flaticon-right-arrow"></i>
+									<a class="blob-btn" href="" data-animation="fadeInUp" data-delay="1s">Saiba Mais<i class="flaticon-right-arrow"></i>
 									</a>
 	                            	 				                    	<div class="slider-video-btn" data-animation="fadeInUp" data-delay="1s">
 				                        	<a href="https://www.youtube.com/watch?v=f3NWvUV8MD8" class="slider-video">
@@ -392,11 +390,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	                <div class="justify-content-center ">
 	                    <div class="col-lg-10">
 	                        <div class="slider-content text-left">
-	                            <div class="sub-title" data-animation="fadeInUp" data-delay="1s">We Provide The Ultimate
-Cycling Experience</div>
-	                            <div class="slider-dec" data-animation="fadeInUp" data-delay="1s">Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.sagittis magna.From helpdesk. </div>
+	                            <div class="sub-title" data-animation="fadeInUp" data-delay="1s">Vem ai, MotoCross em Ação<br />Em Guarulhos!</div>
+	                            <div class="slider-dec" data-animation="fadeInUp" data-delay="1s">O Motocross Guarulhos é um evento que visa promover a prática do motocross na cidade de Guarulhos, trazendo pilotos profissionais e amadores para uma competição emocionante. O evento acontecerá de 8 a 10 de Dezembro no(a)(Local em breve), reunindo fãs, esportistas e entusiastas desse incrível esporte. </div>
 	                            <div class="himeu-slider2-btnss">
-									<a class="blob-btn" href="" data-animation="fadeInUp" data-delay="1s">Read More<i class="flaticon-right-arrow"></i>
+									<a class="blob-btn" href="" data-animation="fadeInUp" data-delay="1s">Saiba Mais<i class="flaticon-right-arrow"></i>
 									</a>
 	                            	 				                    	<div class="slider-video-btn" data-animation="fadeInUp" data-delay="1s">
 				                        	<a href="https://www.youtube.com/watch?v=f3NWvUV8MD8" class="slider-video">
