--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-widget-container">
 					<div class="title-boxs">
 			<div class="title-box">
-								<span class="small-title">What We Do</span>
-													<h2 class="title-hadding"><span><p>We work creatively.</p>
+								<span class="small-title">O que fazemos</span>
+													<h2 class="title-hadding"><span><p>Nós trabalhamos criativamente!</p>
 </span></h2>
 											</div>
 		</div>
@@ -441,19 +441,19 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-element elementor-element-61fc6cd elementor-widget elementor-widget-heading" data-id="61fc6cd" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
-.elementor-heading-title{padding:0;margin:0;line-height:1}.elementor-widget-heading .elementor-heading-title[class*=elementor-size-]>a{color:inherit;font-size:inherit;line-height:inherit}.elementor-widget-heading .elementor-heading-title.elementor-size-small{font-size:15px}.elementor-widget-heading .elementor-heading-title.elementor-size-medium{font-size:19px}.elementor-widget-heading .elementor-heading-title.elementor-size-large{font-size:29px}.elementor-widget-heading .elementor-heading-title.elementor-size-xl{font-size:39px}.elementor-widget-heading .elementor-heading-title.elementor-size-xxl{font-size:59px}</style><h2 class="elementor-heading-title elementor-size-default"><a href="#">Professional Drivers</a></h2>		</div>
+.elementor-heading-title{padding:0;margin:0;line-height:1}.elementor-widget-heading .elementor-heading-title[class*=elementor-size-]>a{color:inherit;font-size:inherit;line-height:inherit}.elementor-widget-heading .elementor-heading-title.elementor-size-small{font-size:15px}.elementor-widget-heading .elementor-heading-title.elementor-size-medium{font-size:19px}.elementor-widget-heading .elementor-heading-title.elementor-size-large{font-size:29px}.elementor-widget-heading .elementor-heading-title.elementor-size-xl{font-size:39px}.elementor-widget-heading .elementor-heading-title.elementor-size-xxl{font-size:59px}</style><h2 class="elementor-heading-title elementor-size-default"><a href="#">Condutores Profissionais</a></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-87835bd elementor-widget elementor-widget-text-editor" data-id="87835bd" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
-.elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#818a91;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#818a91;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style>				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus ullam corper mattis, pulvinar dapibus leo.</p>						</div>
+.elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#818a91;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#818a91;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style><p>Motoristas apaixonados pelo que fazem e se divertem ao mostrar as melhores manobras possiveis.</p></div>
 				</div>
 				<div class="elementor-element elementor-element-bc41dab elementor-align-center elementor-widget elementor-widget-button" data-id="bc41dab" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
 			<a href="#" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">View More</span>
+						<span class="elementor-button-text">Veja Mais</span>
 		</span>
 					</a>
 		</div>
@@ -469,18 +469,18 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-8e75356 elementor-widget elementor-widget-heading" data-id="8e75356" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default"><a href="#">Quality Support</a></h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default"><a href="#">Suporte de qualidade.</a></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-f1a8fd2 elementor-widget elementor-widget-text-editor" data-id="f1a8fd2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus ullam corper mattis, pulvinar dapibus leo.</p>						</div>
+							<p>Tanto ao motorista quando as pessoas podem contar com nosso time de suporte para sanar suas duvidas e auxilio.</p></div>
 				</div>
 				<div class="elementor-element elementor-element-90717bd elementor-align-center elementor-widget elementor-widget-button" data-id="90717bd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
 			<a href="#" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">View More</span>
+						<span class="elementor-button-text">Veja Mais</span>
 		</span>
 					</a>
 		</div>
@@ -496,18 +496,18 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-a526335 elementor-widget elementor-widget-heading" data-id="a526335" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default"><a href="#">Service Variaty</a></h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default"><a href="#">Variedade no Serviço</a></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-afd3127 elementor-widget elementor-widget-text-editor" data-id="afd3127" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus ullam corper mattis, pulvinar dapibus leo.</p>						</div>
+							<p>Estamos com a diversidade e variedade sempre em mente ao realizar nosso serviço, prezamos por não só a representativadade mas também o bem estar de todos.</p></div>
 				</div>
 				<div class="elementor-element elementor-element-b74899a elementor-align-center elementor-widget elementor-widget-button" data-id="b74899a" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
 			<a href="#" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">View More</span>
+						<span class="elementor-button-text">Veja Mais</span>
 		</span>
 					</a>
 		</div>
@@ -521,8 +521,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-widget-container">
 					<div class="himeu-theme-buttons ">
 			<div class="theme-buttons">
-												<a  href="https://himeu.bikebuzzbd.com/?page_id=1192" class="theme-button colorbg">
-					Check Our Protfolo<i class="flaticon-right-arrow"></i>
+												<a  href="https://drive.google.com/file/u/0/d/1EbXn5zQZsShbovo1gAsRgkBCWkbE-pT4/view?usp=sharing&pli=1" class="theme-button colorbg">
+					Cheque o portifolio do Diretor Geral<i class="flaticon-right-arrow"></i>
 				</a>
 											</div>
 		</div>
@@ -543,15 +543,15 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-56c9bda elementor-widget elementor-widget-heading" data-id="56c9bda" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h6 class="elementor-heading-title elementor-size-default">Our Project</h6>		</div>
+			<h6 class="elementor-heading-title elementor-size-default">Nosso projeto</h6>		</div>
 				</div>
 				<div class="elementor-element elementor-element-777bcb2 elementor-widget elementor-widget-heading" data-id="777bcb2" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h5 class="elementor-heading-title elementor-size-default">We Are Give The Best Cycling Service.</h5>		</div>
+			<h5 class="elementor-heading-title elementor-size-default">Vamos realizar a melhor experiência de motocross da cidade</h5>		</div>
 				</div>
 				<div class="elementor-element elementor-element-2c40181 elementor-widget elementor-widget-text-editor" data-id="2c40181" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Our Macchina is a well-established auto repair shop in Manhattie New York. Our company offers car maintenance to major repairs.</p>						</div>
+							<p>O objetivo deste projeto é criar um espaço para a prática do motocross na cidade de Guarulhos. O motocross é um desporto que tem ganho popularidade no Brasil, e a criação de um espaço adequado para a prática dessa modalidade esportiva pode atrair turistas e praticantes locais, além de fomentar o desenvolvimento do esporte na região.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -562,7 +562,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<div class="elementor-button-wrapper">
 			<a href="#" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">View More Project</span>
+						<span class="elementor-button-text">Veja mais sobre</span>
 		</span>
 					</a>
 		</div>
@@ -584,8 +584,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-widget-container">
 					<div class="title-boxs">
 			<div class="title-box">
-								<span class="small-title">Our Testimonial</span>
-													<h2 class="title-hadding"><span><p>What Our Client Say.</p>
+								<span class="small-title">Nossos Testimonios</span>
+													<h2 class="title-hadding"><span><p>O que nossos clientes dizem.</p>
 </span></h2>
 											</div>
 		</div>
