--- a/index.html
+++ b/index.html
@@ -756,18 +756,18 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-ef8e5ee elementor-widget elementor-widget-heading" data-id="ef8e5ee" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h5 class="elementor-heading-title elementor-size-default"> Most popular repair Service customers</h5>		</div>
+			<h5 class="elementor-heading-title elementor-size-default">As melhores motos para o seu entreterimento!</h5>		</div>
 				</div>
 				<div class="elementor-element elementor-element-e55627d elementor-widget elementor-widget-text-editor" data-id="e55627d" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Our Macchina is a well-established auto repair shop in Manhattie New York. Our company offers car maintenance to major repairs.</p>						</div>
+							<p>As motos passam por um processo de revisão para garantir sua eficácia durante todo o seu percurso.</p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-2c9b915 elementor-align-left elementor-widget elementor-widget-button" data-id="2c9b915" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
 			<a href="#" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">View More</span>
+						<span class="elementor-button-text">Seja Mais</span>
 		</span>
 					</a>
 		</div>
