--- a/index.html
+++ b/index.html
@@ -3202,7 +3202,7 @@
 														<div class="elementor-widget-container">
 															<div class="elementor-icon-wrapper">
 																<div class="elementor-icon">
-																	<i aria-hidden="true" class="ico ico-phone3"></i>
+																	<img>
 																</div>
 															</div>
 														</div>
@@ -3220,7 +3220,10 @@
 														data-widget_type="heading.default">
 														<div class="elementor-widget-container">
 															<h5 class="elementor-heading-title elementor-size-default">
-																Phone: +8865432127567</h5>
+																WhatsApp: 
+																+55 11 96483-1111 | 
+																+55 11 96483-1111
+															</h5>
 														</div>
 													</div>
 												</div>
@@ -3242,7 +3245,7 @@
 						<div class="row">
 							<div class="col-md-6 d-flex flex-wrap align-content-center">
 								<div class="copyright">
-									<p>Himeu © himeu 2023 | Developed by: <a href="#">themebuzz</a></p>
+									<p>ACOMES © ACOMES 2024 | Developed by: <a href="">Minimal Byte</a></p>
 								</div>
 							</div>
 							<div class="col-md-6 d-flex justify-content-end">
