--- a/index.html
+++ b/index.html
@@ -3212,7 +3212,7 @@
 														data-widget_type="heading.default">
 														<div class="elementor-widget-container">
 															<h6 class="elementor-heading-title elementor-size-default">
-																Contact With Us</h6>
+																Entre contato:</h6>
 														</div>
 													</div>
 													<div class="elementor-element elementor-element-ecf50e8 elementor-widget elementor-widget-heading"
@@ -3220,9 +3220,8 @@
 														data-widget_type="heading.default">
 														<div class="elementor-widget-container">
 															<h5 class="elementor-heading-title elementor-size-default">
-																WhatsApp: 
-																+55 11 96483-1111 | 
-																+55 11 93206-2352
+																WhatsApp (Diretor comercial) | 
+																<a href="https://web.whatsapp.com/send?phone=5511932062352">(11) 9 3206-2352</a>
 															</h5>
 														</div>
 													</div>
