--- a/index.html
+++ b/index.html
@@ -3212,7 +3212,7 @@
 														data-widget_type="heading.default">
 														<div class="elementor-widget-container">
 															<h6 class="elementor-heading-title elementor-size-default">
-																Entre contato:</h6>
+																Entre em contato:</h6>
 														</div>
 													</div>
 													<div class="elementor-element elementor-element-ecf50e8 elementor-widget elementor-widget-heading"
