--- a/index.html
+++ b/index.html
@@ -997,14 +997,14 @@
 									</li>
 									<li id="menu-item-6902"
 										class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-6902">
-										<a href="#">Contact</a>
+										<a href="#">Contato</a>
 										<ul class="sub-menu">
 											<li id="menu-item-6903"
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6903">
-												<a href="./contact-us/">Contact Primario</a></li>
+												<a href="./contact-us/">Contato Primario</a></li>
 											<li id="menu-item-6904"
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6904">
-												<a href="./contact-two/">Contact Two</a></li>
+												<a href="./contact-two/">Contato Secundario</a></li>
 										</ul>
 									</li>
 								</ul>
