--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@
 								</div>
 							</div>
 						</div>
-					</section>
+					</section><!--
 					<section
 						class="elementor-section elementor-top-section elementor-element elementor-element-56b1097 elementor-section-full_width elementor-section-height-default elementor-section-height-default"
 						data-id="56b1097" data-element_type="section"
@@ -1842,7 +1842,7 @@
 								</div>
 							</div>
 						</div>
-					</section>
+					</section>-->
 					<section
 						class="elementor-section elementor-top-section elementor-element elementor-element-2751c01 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
 						data-id="2751c01" data-element_type="section"
@@ -3202,7 +3202,7 @@
 														<div class="elementor-widget-container">
 															<div class="elementor-icon-wrapper">
 																<div class="elementor-icon">
-																	<img>
+																	<img src="./img/acomes-logo.jpg">
 																</div>
 															</div>
 														</div>
@@ -3244,7 +3244,7 @@
 						<div class="row">
 							<div class="col-md-6 d-flex flex-wrap align-content-center">
 								<div class="copyright">
-									<p>ACOMES © ACOMES 2024 | Developed by: <a href="">Minimal Byte</a></p>
+									<p>ACOMES © ACOMES 2024 | Desenvolvido por: <a href="https://github.com/minimalbyte">Minimal Byte</a></p>
 								</div>
 							</div>
 							<div class="col-md-6 d-flex justify-content-end">
